--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.29.0
 SQLAlchemy==2.0.30
 psycopg2-binary==2.9.9
 pyjwt==2.10.1
+bcrypt==3.2.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.1
 pytest==8.2.1
