--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://usuario:senha@localhost:5432/nome_do_banco
 SECRET_KEY=sua_chave_secreta
+UPLOAD_PATH=seu_diretorio_upload
